<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.moish.aplication_2_forCarRent.controller.fragments.Home">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-5dp"
        android:text="Car details:"/>
    <TextView
        android:id="@+id/fixed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="Branch:"/>

    <TextView
        android:id="@+id/km"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="Kilometers traveled:"/>
    <TextView
        android:id="@+id/mod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="Model:"/>

    <EditText
        android:id="@+id/Start_kilometers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_gravity="top"
        android:visibility="gone"/>
        android:hint="@string/Start_kilometers"
        android:inputType="number" />
    <EditText
        android:id="@+id/End_kilometers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_gravity="top"
        android:visibility="gone"/>
        android:hint="@string/End_kilometers"
        android:inputType="number" />
    <EditText
        android:id="@+id/TotalToPay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:visibility="gone"/>
        android:layout_gravity="top"
        android:hint="@string/TotalToPay"
        android:inputType="number" />

    <EditText
        android:id="@+id/hour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:layout_gravity="top"
        android:hint="@string/hour"
        android:visibility="gone"/>
        android:inputType="number" />

    <EditText
        android:id="@+id/kilometers_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:hint="insert the kilometers that appears on the dashboard of the car"
        android:inputType="number" />

    <EditText
        android:id="@+id/IdEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        android:hint="Please, insert the car number"
        android:inputType="number" />

    <EditText
        android:id="@+id/liters_of_fuel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="20"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:hint="liters of fuel supplied by the customer"
        android:inputType="number" />

    <Button
        android:id="@+id/ButtomFinish"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:ems="28"
        android:layout_gravity="center"
        android:text="Finish reserve"
        android:layout_marginTop="170dp"/>


</FrameLayout>
