<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.moish.aplication_2_forCarRent.controller.fragments.Home">

        <!-- TODO: Update blank fragment layout -->

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <EditText
            android:id="@+id/idClientResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/id_request"
            android:inputType="number" />
        <Button
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok_button"/>

        <LinearLayout
            android:id="@+id/contentAllBranches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Select a Branch"/>
            <Spinner
                android:id="@+id/fragment_simpleSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Branch details:"/>
                <TextView
                    android:id="@+id/city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Branch city"/>

                <TextView
                    android:id="@+id/street"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Branch street"/>
                <TextView
                    android:id="@+id/addressNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Branch Address Number"/>
                <TextView
                    android:id="@+id/parkingAvailable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/number_ofParking_available"/>

            </LinearLayout>
            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
            android:text="Available cars in this Branch:"/>

            <ListView
                android:id="@+id/freeCars"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <TextView
                android:id="@+id/reserveIDResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""/>
        </LinearLayout>
    </LinearLayout>
  </ScrollView>
</FrameLayout>
